mobile width horizontal scrolling fix

--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -1,7 +1,6 @@
 /* Base Styles */
 body, html {
 	overflow-x: hidden !important;
-	background: $white;
 	width: 100%;
 }
 body {
